--- a/app/src/main/res/layout/activity_signup_password_page.xml
+++ b/app/src/main/res/layout/activity_signup_password_page.xml
@@ -4,11 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SignupPasswordPage">
+    tools:context=".SignupPasswordPage"
+    android:onClick="hideKb">
     <RelativeLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="0.5">
+        android:layout_weight="0.5"
+        android:onClick="hideKb"
+        android:clipChildren="false"
+        android:clipToPadding="false">
 
         <TextView
             android:id="@+id/vendorSignUpTitle"
@@ -59,7 +63,9 @@
             android:layout_marginTop="20dp"
             android:textSize="20sp"
             android:textColor="#333333"
-            android:hint="Enter your password"/>
+            android:hint="Enter your password"
+            android:maxLength="40"
+            android:singleLine="true"/>
 
         <TextView
             android:id="@+id/passwordError"
@@ -70,7 +76,8 @@
             android:textColor="@color/redPrimary"
             android:fontFamily="@font/sfprotext_semibold"
             android:textSize="14sp"
-            android:text="error" />
+            android:text="error"
+            android:visibility="invisible"/>
 
         <TextView
             android:id="@+id/confirmPasswordTitle"
@@ -95,7 +102,9 @@
             android:layout_marginTop="20dp"
             android:textSize="20sp"
             android:textColor="#333333"
-            android:hint="Confirm your password"/>
+            android:hint="Confirm your password"
+            android:maxLength="40"
+            android:singleLine="true"/>
 
         <TextView
             android:id="@+id/confirmPasswordError"
@@ -106,7 +115,8 @@
             android:textColor="@color/redPrimary"
             android:fontFamily="@font/sfprotext_semibold"
             android:textSize="14sp"
-            android:text="error" />
+            android:text="error"
+            android:visibility="invisible"/>
 
 
 
@@ -117,7 +127,7 @@
             android:text="NEXT"
             android:fontFamily="@font/sfprotext_semibold"
             android:layout_alignRight="@id/passwordBox"
-            android:textSize="28dp"
+            android:textSize="20dp"
             android:textColor="#ffffff"
             android:layout_marginTop="20dp"
             android:background="@drawable/pink_round_btn"
