--- a/app/src/main/res/layout/review_list_item.xml
+++ b/app/src/main/res/layout/review_list_item.xml
@@ -13,20 +13,44 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Rating"
-        android:fontFamily="@font/sfprotext_regular"
+        android:fontFamily="@font/sfprotext_bold"
 
         android:textColor="@color/pinkPrimary"
-        android:textSize="14sp"/>
+        android:textSize="18sp"/>
+
+    <TextView
+        android:id="@+id/reviewOrderName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="18dp"
+        android:layout_toEndOf="@+id/scoreStar"
+        android:layout_alignBaseline="@id/ratingScore"
+        android:fontFamily="@font/sfprotext_regular"
+        android:text="Order Name"
+        android:textColor="#828282"
+        android:textSize="14sp" />
+
+    <TextView
+        android:id="@+id/reviewOrderNameExtra"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:layout_toEndOf="@+id/reviewOrderName"
+        android:layout_alignBaseline="@id/reviewOrderName"
+        android:fontFamily="@font/sfprotext_regular"
+        android:text="Order Name Extra"
+        android:textColor="#828282"
+        android:textSize="14sp" />
 
     <TextView
         android:id="@+id/ratingScore"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="0.0"
-        android:fontFamily="@font/sfprotext_regular"
+        android:fontFamily="@font/sfprotext_bold"
 
         android:textColor="@color/pinkPrimary"
-        android:textSize="14sp"
+        android:textSize="18sp"
         android:layout_toEndOf="@id/rating"
         android:layout_marginStart="4dp"/>
 
@@ -38,7 +62,7 @@
         android:fontFamily="@font/sfprotext_regular"
 
         android:textColor="@color/pinkPrimary"
-        android:textSize="14sp"
+        android:textSize="18sp"
         android:layout_toEndOf="@id/ratingScore"
         android:layout_marginStart="4dp"/>
 
@@ -49,9 +73,9 @@
         android:text="comment"
         android:fontFamily="@font/sfprotext_regular"
 
-        android:textColor="#828282"
-        android:textSize="14sp"
-        android:layout_marginTop="12dp"
+        android:textColor="#333333"
+        android:textSize="16sp"
+        android:layout_marginTop="16dp"
         android:layout_below="@id/rating"
         />
 
