--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -123,10 +123,12 @@
             android:id="@+id/refreshBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/less_round_pink_btn"
+            android:background="@drawable/button_white_rounded"
             android:text="REFRESH"
-            android:textColor="@android:color/white"
+            android:textColor="@color/pinkPrimary"
             android:paddingHorizontal="40dp"
+            android:fontFamily="@font/sfprotext_semibold"
+            android:textSize="16sp"
             />
 
     </RelativeLayout>
